--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "clean-todo-vite",
   "private": true,
+  "homepage": "https://tjtamas.github.io/clean-todo-vite/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
